# okfonts

./: .dockerignore  .gitignore  .prettierrc  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
src/okfonts/: __init__.py  cli.py  diagram.py  process.py  proxy.py
tests/: conftest.py  test_browser_metrics.py
