[project]
name = "okfonts"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "brotli>=1.2.0",
    "fonttools>=4.62.1",
]

[project.optional-dependencies]
proxy = [
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
okfonts = "okfonts.cli:main"
okfonts-proxy = "okfonts.proxy:main"

[build-system]
requires = ["uv_build>=0.7.2,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
test = [
    "pytest>=8.0",
    "playwright>=1.50",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B", "A", "SIM", "RUF"]
